--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 textModuleTitle='Text module'
 textModuleExtensions={'txt', 'tex', 'md'}
-textModuleOptions={'countString', 'countChar'}
+textModuleOptions={'countString', 'countChar', 'countWords'}
