Added Image Module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 textModuleTitle='Text module'
 textModuleExtensions={'txt', 'tex', 'md'}
 textModuleOptions={'countString', 'countChar', 'countWords'}
+imageModuleTitle='Image Module'
+imageModuleExtensions={'jpg', 'jpeg', 'jfif', 'gif', 'png', 'avif'}
+imageModuleOptions={'imageSize', 'imageExif', 'imagePixelColor'}
