Added Audio Module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ textModuleOptions={'countString', 'countChar', 'countWords'}
 imageModuleTitle='Image Module'
 imageModuleExtensions={'jpg', 'jpeg', 'jfif', 'gif', 'png', 'avif'}
 imageModuleOptions={'imageSize', 'imageExif', 'imagePixelColor'}
+audioModuleTitle='Audio Module'
+audioModuleExtensions={'mp3', 'wav', 'aiff', 'aac'}
+audioModuleOptions={'audioTrackName', 'audioDuration', 'audioBitrate'}
