--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>2.18.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>ffmpeg</artifactId>
+            <version>5.1.2-1.5.8</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
