Added Directory Module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ imageModuleOptions={'imageSize', 'imageExif', 'imagePixelColor'}
 audioModuleTitle='Audio Module'
 audioModuleExtensions={'mp3', 'wav', 'aiff', 'aac'}
 audioModuleOptions={'audioTrackName', 'audioDuration', 'audioBitrate'}
+directoryModuleTitle='Directory Module'
+directoryModuleExtensions={'DIRECTORY'}
+directoryModuleOptions={'directoryList', 'directorySize', 'directoryLastModified'}
